revise gradle project settings for assigning Java11 env path